# nestjs-python-grpc

.devcontainer/: Dockerfile  devcontainer.json
hellogrpc/: package.json  pnpm-lock.yaml
hellogrpc/src/: app.controller.ts  app.module.ts  app.service.ts  sample.ts
hellogrpc/src/autogen/: sample.ts
python/: package.json  pyproject.toml
python/autogen/: sample_pb2.py  sample_pb2.pyi  sample_pb2_grpc.py
python/python/: main.py
python/python/autogen/: sample_pb2_grpc.py
